--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -43,15 +43,17 @@ jobs:
         with:
           name: linux-wheels
           path: dist/wheelhouse
+          
   PyPI_Upload:
     runs-on: ubuntu-latest
+    needs: ['OSX-test', 'manylinux-test']
+    steps:
       - name: Download all
         uses: actions/download-artifact@v2
       - name: Move to dist
         run: |
           mkdir dist
           cp */*.{whl,gz} dist/.
-      
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
