--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -44,6 +44,7 @@ jobs:
           
   PyPI_Upload:
     runs-on: ubuntu-latest
+    needs: ['manylinux']
     steps:
       - name: Download all
         uses: actions/download-artifact@v2
