--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -43,6 +43,13 @@ jobs:
           path: dist/wheelhouse
           
   PyPI_Upload:
+    on: 
+      push:
+        branches: 
+          - main
+      pull_request: 
+        branches: 
+          - main
     runs-on: ubuntu-latest
     needs: ['manylinux']
     steps:
