--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,12 +6,18 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: Publish
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - master
+    tags:
+      - v*
 
 jobs:
-  manylinux:
+  Build_Wheel:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
