dealing with new mac installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools", "numpy"]
+requires = ["setuptools<60.0.0", "numpy"]
 
