--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -50,7 +50,7 @@ jobs:
           
   PyPI_Upload:
     runs-on: ubuntu-latest
-    needs: ['manylinux']
+    needs: ['Build_Wheel']
     steps:
       - name: Download all
         uses: actions/download-artifact@v2
